--- a/app/views/house/show.html.erb
+++ b/app/views/house/show.html.erb
@@ -4,7 +4,7 @@
 		<%= content_tag( 'li', link_to( 'Next sitting day', house_days_sitting_day_next_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Upcoming sitting days', house_days_sitting_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All sitting days', house_days_sitting_day_list_url ) ) %>
-		<%= content_tag( 'li', link_to( 'All preceding sitting days', house_days_sitting_day_preceding_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Preceding sitting days', house_days_sitting_day_preceding_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Latest sitting day', house_days_sitting_day_latest_url ) ) %>
 	</ul>
 </div>
@@ -12,10 +12,10 @@
 <div id="virtual-sitting-days">
 	<%= content_tag( 'h2', 'Virtual sitting days' ) %>
 	<ul>
-		<%= content_tag( 'li', link_to( 'Upcoming virtual sitting days', house_days_virtual_sitting_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Next virtual sitting day', house_days_virtual_sitting_day_next_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Upcoming virtual sitting days', house_days_virtual_sitting_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All virtual sitting days', house_days_virtual_sitting_day_list_url ) ) %>
-		<%= content_tag( 'li', link_to( 'All preceding virtual sitting days', house_days_virtual_sitting_day_preceding_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Preceding virtual sitting days', house_days_virtual_sitting_day_preceding_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Latest virtual sitting day', house_days_virtual_sitting_day_latest_url ) ) %>
 	</ul>
 </div>
@@ -23,10 +23,10 @@
 <div id="adjournment-days">
 	<%= content_tag( 'h2', 'Adjournment days' ) %>
 	<ul>
-		<%= content_tag( 'li', link_to( 'Upcoming adjournment days', house_days_adjournment_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Next adjournment day', house_days_adjournment_day_next_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Upcoming adjournment days', house_days_adjournment_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All adjournment days', house_days_adjournment_day_list_url ) ) %>
-		<%= content_tag( 'li', link_to( 'All preceding adjournment days', house_days_adjournment_day_preceding_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Preceding adjournment days', house_days_adjournment_day_preceding_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Latest adjournment day', house_days_adjournment_day_latest_url ) ) %>
 	</ul>
 </div>
