serving from api.parliament.uk/egg-timer means we can't use relative paths to /. replaced / with rails helper to home url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,8 @@ ol#prorogations {list-style: none;padding-left:0;}
 <nav>
 <p>
 <a href="/">Calculate scrutiny period</a>
+
+<%= link_to( 'Calculate scrutiny period', home_url ) %>
 </p>
 <p>Powered by House of Commons librarians.</p>
 </nav>
