--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,3 +1,3 @@
 <% @years.each do |year| -%>
-	<%= content_tag( 'p', link_to( year, "/calendar/#{year}" ) ) %>
+	<%= content_tag( 'p', link_to( year, calendar_year_url( :year => year ) ) ) %>
 <% end -%>
