--- a/app/views/meta/schema.html.erb
+++ b/app/views/meta/schema.html.erb
@@ -1,1 +1,1 @@
-<a href="/schema.png"><%= image_tag( '/schema.png' ) %></a>
+<a href="/egg-timer/schema.png"><%= image_tag( '/egg-timer/schema.png' ) %></a>
