made paths to static files relative to /egg-timer

--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -1,9 +1,9 @@
 <ul>
-	<%= content_tag( 'li', link_to( 'Monkey patched date class', '/date.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Main calculator controller', '/calculator_controller.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', '/bicameral_both_houses_sitting.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', '/bicameral_si_either_house_sitting.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/commons_only_si.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/pnsi.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/treaty.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Monkey patched date class', '/egg-timer/date.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Main calculator controller', '/egg-timer/calculator_controller.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', '/egg-timer/bicameral_both_houses_sitting.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', '/egg-timer/bicameral_si_either_house_sitting.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/egg-timer/commons_only_si.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/egg-timer/pnsi.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/egg-timer/treaty.rb.html' ) ) %>
 </ul>
