fixed link and title to json by making relative to /egg-timer

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -30,7 +30,7 @@
 
 <p>If sitting days change within this period, the end date of the scrutiny period will need to be recalculated.</p>
 
-<p>Show the <a href="<%= request.original_fullpath.sub '?', '.json?' %>" title="<%= request.original_fullpath.sub '?', '.json?' %>">JSON result</a> for this calculation.</p>
+<p>Show the <a href="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>" title="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>">JSON result</a> for this calculation.</p>
 	
 	
 <% end -%>
