link to add to calendar

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -30,6 +30,11 @@
 
 <p>If sitting days change within this period, the end date of the scrutiny period will need to be recalculated.</p>
 
+
+
+
+<p><a href="<%= request.original_fullpath.sub '?', '.ics?' %>">Add to calendar</a></p>
+
 <p>Show the <a href="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>" title="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>">JSON result</a> for this calculation.</p>
 	
 	
