fixed add to calendar link

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -33,7 +33,7 @@
 
 
 
-<p><a href="<%= request.original_fullpath.sub '?', '.ics?' %>">Add to calendar</a></p>
+<p><a href="/egg-timer<%= request.original_fullpath.sub '?', '.ics?' %>">Add to calendar</a></p>
 
 <p>Show the <a href="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>" title="/egg-timer<%= request.original_fullpath.sub '?', '.json?' %>">JSON result</a> for this calculation.</p>
 	
