--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -8,8 +8,10 @@
 
 <li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
 
-	<li><%= link_to( 'Source code: github.com/fantasticlife/egg-timer', 'https://github.com/fantasticlife/egg-timer' ) %></li>
+	<li><%= link_to( 'Source code: github.com/ukparliament/egg-timer', 'https://github.com/ukparliament/egg-timer' ) %></li>
 	
 	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %></li>
 </ul>
+
+beep
