--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -13,3 +13,4 @@
 	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %></li>
 </ul>
+boop
