link directly to favicon on parliament.uk

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,17 @@
 <html lang="en-gb">
 <head>
   <title>Parliament Calendar</title>
+  <link rel="icon" href="https://api.parliament.uk/egg-timer/favicon.ico">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
       <meta name="viewport" content="width=device-width">     
             <style>
             *, *:before, *:after {box-sizing: border-box;}
