shift to system-ui font

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,20 +3,10 @@
 <head>
   <title>Parliament Calendar</title>
   <link rel="icon" href="https://api.parliament.uk/egg-timer/favicon.ico">
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-      <meta name="viewport" content="width=device-width">     
+   <meta name="viewport" content="width=device-width">     
             <style>
             *, *:before, *:after {box-sizing: border-box;}
-            body {font-family: "Helvetica Neue","Helvetica",sans-serif;max-width:44rem;padding:1rem;font-size:1.1rem;line-height: 1.4;margin:auto;}
+            body {font-family: system-ui,sans-serif;max-width:44rem;padding:1rem;font-size:1.1rem;line-height: 1.4;margin:auto;}
             main {margin:4rem 0;}
             h1 {font-size:1.3rem;}
             a {text-decoration: none;}
