added required to radio button

--- a/app/views/calculator/_procedure.html.erb
+++ b/app/views/calculator/_procedure.html.erb
@@ -1,4 +1,4 @@
 <p>
 <label class="radio">
-<input type="radio" id="procedure-<%= procedure.id %>" name="procedure" value="<%= procedure.id %>"> <%= procedure.name %></label>
+<input type="radio" id="procedure-<%= procedure.id %>" name="procedure" value="<%= procedure.id %>" required> <%= procedure.name %></label>
 </p>
