--- a/app/views/calculator/not_enough_information.html.erb
+++ b/app/views/calculator/not_enough_information.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'p', "You must enter a procedure, a start date and a day count. The day count must be greater than 0." ) %>
+<%= content_tag( 'p', "You must enter a start date, a day count and either a procedure or a calculation style. The day count must be greater than 0." ) %>
