--- a/app/views/calculator/calculate.json.erb
+++ b/app/views/calculator/calculate.json.erb
@@ -4,8 +4,10 @@
 <% else -%>
 	"anticipated_scrutiny_start_date": "<%= @scrutiny_start_date.strftime( '%Y-%m-%d' ) %>",
 	"anticipated_scrutiny_end_date": "<%= @scrutiny_end_date.strftime( '%Y-%m-%d' ) %>",
+	<% if @procedure -%>
 	"procedure": "<%= @procedure.name %>",
 	"procedure_id": "<%= @procedure.id %>",
+	<% end -%>
 	"day_count": "<%= @day_count %>",
 	"start_date": "<%= @start_date.strftime( '%Y-%m-%d' ) %>"<% end -%>
 }
