language edits for error page: https://trello.com/c/CRRrZeQl

--- a/app/views/calculator/not_enough_information.html.erb
+++ b/app/views/calculator/not_enough_information.html.erb
@@ -1,6 +1,6 @@
-<%= content_tag( 'p', "You must enter:" ) %>
+<%= content_tag( 'p', "In order to complete the calculation, we need:" ) %>
 <ul>
 	<%= content_tag( 'li', "A start date" ) if params['start-date'].nil? %>
 	<%= content_tag( 'li', "A day count" ) if params['day-count'].nil? %>
-	<%= content_tag( 'li', "Either a procedure or a calculation style" )  if params['procedure'].nil? and params['calculation-style'].nil?%>
+	<%= content_tag( 'li', "A procedure, or a calculation style" )  if params['procedure'].nil? and params['calculation-style'].nil?%>
 </ul>
