change emphasis style to avoid italics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
   height: 4rem;
   vertical-align: bottom;
 }
+em {font-style: normal; text-decoration:underline;}
 tr {border-bottom: thin dotted black;}
 th {
   color: gray;
