--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,14 +65,14 @@ ol#prorogations {list-style: none;padding-left:0;}
 <%= link_to( 'Sessions', session_list_url )  %>
 &middot;
 <%= link_to( 'Calendar', calendar_list_url )  %>
-&middot;
+<br>
 <%= link_to( 'About this application', meta_list_url )  %>
 &middot;
 <%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
 </p>
 
 </nav>
-<p>Made available under an <%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %>.</p>
+<p>Made available under the <%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %></p>
 </footer>
 
 
