styles for calculator form

--- a/app/views/calculator/_procedure.html.erb
+++ b/app/views/calculator/_procedure.html.erb
@@ -1,4 +1,5 @@
-<p>
-<label class="radio">
-<input type="radio" id="procedure-<%= procedure.id %>" name="procedure" value="<%= procedure.id %>" required> <%= procedure.name %></label>
+<p class="radio">
+	<label class="radio">
+		<input type="radio" id="procedure-<%= procedure.id %>" name="procedure" value="<%= procedure.id %>" required> &nbsp;<%= procedure.name %>
+	</label>
 </p>
