--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,17 @@
             body {font-family: system-ui,sans-serif;max-width:48rem;padding:1rem;font-size:1.2rem;line-height: 1.4;margin:auto;}
             main {margin:4rem 0;}
             h1 {font-size:1.3rem;}
-            label.radio {padding:0.25rem 0.5rem;border-radius:0.25rem;}
-            label.radio:hover {background-color: pink;}
+            p.radio * {cursor:pointer;}
+            p.radio {padding:0.25rem;border-radius:0.5rem;width:100%;}
+            p.radio:hover {background-color: powderblue;border:1pt solid black;}
+            input[type=radio] {transform: scale(1.5);}
             input[type=date] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
             input[type=number] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
             input:focus {border-color: blue;}
-            button {width:40%;padding: 0.5rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid black;}
+            button {padding: 1rem;border-radius:0.25rem;font-size:1.2rem;color:blue;background-color: white;border:2pt solid blue;font-weight:bold;cursor:pointer;}
             button:hover {border:2pt solid blue;}
             p.box {padding: 0.75rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid gray;}
+            fieldset {margin-bottom:1.5rem;}
             td, th {
   padding: 0.5rem;
     text-align: left;
