--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
             h1 {font-size:1.3rem;}
             p.radio * {cursor:pointer;}
             p.radio {padding:0.25rem;border-radius:0.5rem;width:100%;}
-            p.radio:hover {background-color: powderblue;border:1pt solid black;}
+            p.radio:hover {background-color: powderblue;}
             input[type=radio] {transform: scale(1.5);}
             input[type=date] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
             input[type=number] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
