--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@ ol#prorogations {list-style: none;padding-left:0;}
 
 <p><%= link_to( 'The Egg Timer', home_url ) %> &mdash; powered by House of Commons librarians</p>
 
-<h1><%= @title || "Parliament Calendar" %></h1>
+<h1><%= @title || "Egg Timer" %></h1>
 </header>
 <main>
 <%= yield %>
