--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
             *, *:before, *:after {box-sizing: border-box;}
             body {font-family: system-ui,sans-serif;max-width:48rem;padding:1rem;font-size:1.2rem;line-height: 1.4;margin:auto;}
             h1 {font-size:1.75rem;font-weight:normal;}
+            h2 {font-size:1.5rem;font-weight:normal;}
             p.radio * {cursor:pointer;}
             p.radio {padding:0.25rem;border-radius:0.5rem;width:100%;}
             p.radio:hover {background-color: powderblue;}
@@ -72,20 +73,21 @@ footer {margin-top:4rem;}
 <nav>
 <p>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
-&middot;
+<br>
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
-&middot;
+<br>
 <%= link_to( 'Sessions', session_list_url )  %>
-&middot;
+<br>
 <%= link_to( 'Calendar', calendar_list_url )  %>
 <br>
 <%= link_to( 'About this application', meta_list_url )  %>
-&middot;
+<br>
 <%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
-</p>
-
+<br>
+<br>
+<%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %>
 </nav>
-<p>Made available under the <%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %></p>
+
 </footer>
 
 
