--- a/app/views/calculator/_style_form.html.erb
+++ b/app/views/calculator/_style_form.html.erb
@@ -3,11 +3,11 @@
 		<legend>Calculation style</legend>
 		<p>
 		<label class="radio">
-		<input type="radio" id="calculation-style-1" name="calculation-style" value="1" required> Bicameral instruments (counts when both Houses sitting)</label>
+		<input type="radio" id="calculation-style-1" name="calculation-style" value="1" required> Bicameral instruments (clock stops if either Houses rises)</label>
 		</p>
 		<p>
 		<label class="radio">
-		<input type="radio" id="calculation-style-2" name="calculation-style" value="2"> Bicameral instruments (counts when either House sitting)</label>
+		<input type="radio" id="calculation-style-2" name="calculation-style" value="2"> Bicameral instruments (clock stops if both Houses rise)</label>
 		</p>
 		<p>
 		<label class="radio">
