--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -12,4 +12,5 @@
 	
 	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %></li>
+	<li><%= link_to( 'MacOS application', meta_app_url )  %></li>
 </ul>
