more detail on application download page

--- a/app/views/meta/app.html.erb
+++ b/app/views/meta/app.html.erb
@@ -1,8 +1,17 @@
-<%= content_tag( 'h2', 'Installation' ) %>
+<h2>Installation</h2>
+
+<p>This website generates JSON output for the calculation of scrutiny dates. This JSON can be called for and parsed outside a web browser.</p>
+
+<p>Here's <a href='/egg-timer/egg-timer.app.zip'>an example application for MacOS, just called 'Egg Timer'</a>, that calls the JSON endpoint and displays the result.</p>
+
+<p>This is an 'unsigned' application, written without an Apple developer account. If you'd like to open the application, please follow <a href="https://support.apple.com/en-gb/guide/mac-help/mh40616/mac">the instructions from Apple</a>:</p>
+
 <ol>
-	<%= content_tag( 'li', link_to( 'Download the zip file', '/egg-timer/egg-timer.app.zip' ) ) %>
-	<%= content_tag( 'li', 'Unzip the file' ) %>
-	<%= content_tag( 'li', "Hold down 'Control' and click the application" ) %>
-	<%= content_tag( 'li', 'From the pop-up menu, click open' ) %>
-	<%= content_tag( 'li', 'In the dialogue box, click open' ) %>
+<li>In the Finder  on your Mac, locate the app you want to open.</li>
+<li>Control-click the app icon, then choose Open from the shortcut menu.</li>
+<li>Click Open.</li>
 </ol>
+
+<p>Please remember that this is only demonstration code - and not intended to be used in production.</p>
+
+<p>The application is written in Xojo.</p> 
