--- a/app/views/meta/app.html.erb
+++ b/app/views/meta/app.html.erb
@@ -1,8 +1,11 @@
-<h2>Installation</h2>
+<h2>Demonstration MacOS application</h2>
 
 <p>This website generates JSON output for the calculation of scrutiny dates. This JSON can be called for and parsed outside a web browser.</p>
 
 <p>Here's <a href='/egg-timer/egg-timer.app.zip'>an example application for MacOS, just called 'Egg Timer'</a>, that calls the JSON endpoint and displays the result.</p>
+
+
+<h2>Installation</h2>
 
 <p>This is an 'unsigned' application, written without an Apple developer account. If you'd like to open the application, please follow <a href="https://support.apple.com/en-gb/guide/mac-help/mh40616/mac">the instructions from Apple</a>:</p>
 
@@ -12,6 +15,10 @@
 <li>Click Open.</li>
 </ol>
 
-<p>Please remember that this is only demonstration code - and not intended to be used in production.</p>
 
-<p>The application is written in Xojo.</p> 
+<h2>Binary source</h2>
+
+
+<p>The application is written in Xojo. The <a href='/egg-timer/Egg Timer.xojo_binary_project.zip'>Xojo binary source</a> is available.</p> 
+
+<p><em>Please remember that this is only demonstration code - and not intended to be used in production.</em> We cannot guarantee that the application will be kept in sync with the website.</p>
