added screenshots to the mac app page

--- a/app/views/meta/app.html.erb
+++ b/app/views/meta/app.html.erb
@@ -15,9 +15,24 @@
 <li>Click Open.</li>
 </ol>
 
+<h2>How to use the application</h2>
+
+<p>The Egg Timer application will calculate a scrutiny date whenever the information used for the calculation is changed.</p>
+
+<p>The 'anticipated scrutiny end date' will be recalculated when you click on a new procedure, when you select a new date in the calendar picker, or when you change the number of days required to count.</p>
+
+<h2>Screenshots</h2>
+
+
+<p><img src="../egg-timer-app-treaties.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties">
+<br>
+A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties</p>
+
+<p><img src="../egg-timer-app-remedial-order.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders">
+<br>
+A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders</p>
 
 <h2>Binary source</h2>
-
 
 <p>The application is written in Xojo. The <a href='/egg-timer/Egg Timer.xojo_binary_project.zip'>Xojo binary source</a> is available.</p> 
 
