--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@ footer {margin-top:4rem;}
             </style>
 </head>
 <body>
+	<h1>HELLO JAYNE!</h1>
 <header>
 
 <img id="logo" src="https://api.parliament.uk/egg-timer/favicon.ico" alt="The Egg Timer">
