--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,8 +62,7 @@ footer {margin-top:4rem;}
 <p>
 <%= link_to( 'The Egg Timer', home_url ) %> &mdash; powered by House of Commons librarians</p>
 
-<!-- <blink><marquee><h1><%= @title || "Egg Timer" %></h1></marquee></blink> -->
-<blink><marquee><h1>hello jayne</blink>
+<h1><%= @title || "Egg Timer" %></h1>
 
 </header>
 <main>
