--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,14 +48,16 @@ ol#prorogations {list-style: none;padding-left:0;}
     transition-property: transform;
 }
 #logo:hover {
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
+    transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
 }
 footer {margin-top:4rem;}
             </style>
 </head>
 <body>
 <header>
+
+<img id="logo" src="https://api.parliament.uk/egg-timer/favicon.ico" alt="The Egg Timer">
 
 <p>
 <%= link_to( 'The Egg Timer', home_url ) %> &mdash; powered by House of Commons librarians</p>
