--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,8 @@ footer {margin-top:4rem;}
 <br>
 <%= link_to( 'Calendar', calendar_list_url )  %>
 <br>
+<%= link_to( 'Houses', house_list_url )  %>
+<br>
 <%= link_to( 'About this application', meta_list_url )  %>
 <br>
 <%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
