--- a/app/views/house/show.html.erb
+++ b/app/views/house/show.html.erb
@@ -1,3 +1,11 @@
+<div id="recess-dates">
+	<%= content_tag( 'h2', 'Recess dates' ) %>
+	<ul>
+		<%= content_tag( 'li', link_to( 'Upcoming recess dates', house_days_recess_dates_upcoming_url ) ) %>
+		<%= content_tag( 'li', link_to( 'All recess_dates', house_days_recess_dates_list_url ) ) %>
+	</ul>
+</div>
+
 <div id="sitting-days">
 	<%= content_tag( 'h2', 'Sitting days' ) %>
 	<ul>
