expanded input box

--- a/app/views/house_days/recess_dates_upcoming.html.erb
+++ b/app/views/house_days/recess_dates_upcoming.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag( 'p', 'Subscribe to calendar:' ) %>
-<input type="text" value="<%= house_days_recess_dates_upcoming_url( :format => 'ics' ) %>" />
+<input type="text" value="<%= house_days_recess_dates_upcoming_url( :format => 'ics' ) %>" size="70" />
 
 <table>
 	<thead>
