--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
             body {font-family: system-ui,sans-serif;max-width:48rem;padding:1rem;font-size:1.2rem;line-height: 1.4;margin:auto;}
             h1 {font-size:1.75rem;font-weight:normal;}
             h2 {font-size:1.5rem;font-weight:normal;}
+            h3 {font-size:1.2rem;font-weight:normal;}
             p.radio * {cursor:pointer;}
             p.radio {padding:0.25rem;border-radius:0.5rem;width:100%;}
             p.radio:hover {background-color: powderblue;}
