uses display description - with start year appended - not just description

--- a/app/views/house_days/_recess_date.html.erb
+++ b/app/views/house_days/_recess_date.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<%= content_tag( 'td', recess_date.description )%>
+	<%= content_tag( 'td', recess_date.display_description )%>
 	<%= content_tag( 'td', recess_date.start_date.strftime( '%A %-d %B %Y') )%>
 	<%= content_tag( 'td', recess_date.end_date.strftime( '%A %-d %B %Y') )%>
 </tr>
