--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,8 +54,19 @@ ol#prorogations {list-style: none;padding-left:0;}
 }
 footer {margin-top:4rem;}
             </style>
+	
+	<%# Add rel alternate links to JSON and ICS where applicable %>
+	<% if @json_url -%>
+		<link rel="alternate" type="application/json" title="Egg timer - <%= @alternate_title %>" href="<%= @json_url %>" />
+	<% end -%>
+	<% if @calendar_links -%>
+		<% @calendar_links.each do |calendar_link| -%>
+			<link rel="alternate" type="text/calendar" title="Egg timer - <%= calendar_link[0] %>" href="<%= calendar_link[1] %>" />
+		<% end -%>
+	<% end -%>
 </head>
 <body>
+	
 <header>
 
 <img id="logo" src="https://api.parliament.uk/egg-timer/favicon.ico" alt="The Egg Timer">
