added display of array containing sessions and prorogations

--- a/app/views/parliament/show.html.erb
+++ b/app/views/parliament/show.html.erb
@@ -1,5 +1,12 @@
 <%= content_tag( 'p', @parliament.dates ) %>
 
+<%= content_tag( 'h2', 'Sessions and prorogations' ) %>
+<ol id="sessions-and-prorgations">
+	<%= render :partial => 'period', :collection => @time_periods %>
+</ol>
+
+
+
 <%= content_tag( 'h2', 'Sessions' ) %>
 <ol id="sessions">
 	<%= render :partial => 'session/session', :collection => @parliament.sessions %>
