--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@ td.commons {font-weight:bold;background-color:lightgreen;}
 td.lords {font-weight:bold;background-color:pink;}
 ol#sessions {list-style: none;padding-left:0;}
 ol#prorogations {list-style: none;padding-left:0;}
+ol#sessions-and-prorogations {list-style: none;padding-left:0;}
 
 #logo {
     overflow: hidden;
