--- a/app/views/prorogation_period/_prorogation_period_with_title.html.erb
+++ b/app/views/prorogation_period/_prorogation_period_with_title.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'li', link_to( "Prorogation #{prorogation_period_with_title.label}", prorogation_period_show_url( :prorogation_period => prorogation_period_with_title ) ) ) %>
+<%= content_tag( 'li', link_to( prorogation_period_with_title.label_with_type, prorogation_period_show_url( :prorogation_period => prorogation_period_with_title ) ) ) %>
