--- a/app/views/session/_session_with_title.html.erb
+++ b/app/views/session/_session_with_title.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'li', link_to( "Session #{session_with_title.label}", session_show_url( :session => session_with_title ) ) ) %>
+<%= content_tag( 'li', link_to( session_with_title.label_with_type, session_show_url( :session => session_with_title ) ) ) %>
