--- a/app/views/parliament/show.html.erb
+++ b/app/views/parliament/show.html.erb
@@ -1,9 +1,11 @@
 <%= content_tag( 'p', @parliament.dates ) %>
 
 <%= content_tag( 'h2', 'Sessions and prorogations' ) %>
-<ol id="sessions-and-prorogations">
-	<%= render :partial => 'period', :collection => @time_periods %>
-</ol>
+<table>
+	<tbody>
+		<%= render :partial => 'period', :collection => @time_periods %>
+	</tbody>
+</table>
 
 
 
