session and prorogation list now a table

--- a/app/views/parliament/_period.html.erb
+++ b/app/views/parliament/_period.html.erb
@@ -1,2 +1,9 @@
-<%= render :partial => 'session/session_with_title', :object => period[2] if period[0] == 'session' %>
-<%= render :partial => 'prorogation_period/prorogation_period_with_title', :object => period[2] if period[0] == 'prorogation' %>
+<tr>
+	<% if period[0] == 'Session' %>
+		<%= content_tag( 'td', link_to( period[2].dates, session_show_url( :session => period[2] ) ) ) %>
+	<% elsif period[0] == 'Prorogation' %>
+		<%= content_tag( 'td', link_to( period[2].dates, prorogation_period_show_url( :prorogation_period => period[2] ) ) ) %>
+	<% end -%>
+	<%= content_tag( 'td', period[0] ) %>
+	</td>
+</tr>
