replaced old period partial, using values from new in parliament period model

--- a/app/views/parliament/show.html.erb
+++ b/app/views/parliament/show.html.erb
@@ -3,7 +3,7 @@
 <%= content_tag( 'h2', 'Sessions and prorogations' ) %>
 <table>
 	<tbody>
-		<%= render :partial => 'period', :collection => @time_periods %>
+		<%= render :partial => 'in_parliament_period', :collection => @in_parliament_periods %>
 	</tbody>
 </table>
 
