comma after day name

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -4,14 +4,14 @@
 
 <p class="box">The <em>anticipated start date</em> of the scrutiny period is
 <br>
-	<strong><big><time><%= @scrutiny_start_date.strftime( '%A %-d %B %Y') %></time></big></strong>
+	<strong><big><time><%= @scrutiny_start_date.strftime( '%A, %-d %B %Y') %></time></big></strong>
 	</p>
 	
 	
 <p class="box">The <em>anticipated end date</em> of the scrutiny period is
 <br>
 
-	<strong><big><time><%= @scrutiny_end_date.strftime( '%A %-d %B %Y') %></time></big></strong>
+	<strong><big><time><%= @scrutiny_end_date.strftime( '%A, %-d %B %Y') %></time></big></strong>
 </p>
 
 <p>This was calculated using this information:</p>
