--- a/app/views/session/show.html.erb
+++ b/app/views/session/show.html.erb
@@ -1,5 +1,7 @@
 <%= content_tag( 'p', @session.dates) %>
 
+<%= content_tag( 'p', "Wikidata ID: #{link_to( @session.wikidata_id, "https://www.wikidata.org/wiki/#{@session.wikidata_id}" )}".html_safe ) if @session.wikidata_id %>
+
 <%= content_tag( 'h2', 'Months' ) %>
 <ol>
 	<%= render :partial => 'month', :collection => @session.month_range %>
