--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,6 +84,8 @@ footer {margin-top:4rem;}
 <footer>
 <nav>
 <p>
+<%= link_to( 'Calculate the number of sitting days in an interval', calculator_interval_url )  %>
+<br>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
 <br>
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
