added commons only sitting day calculation

--- a/app/views/calculator/_style_form.html.erb
+++ b/app/views/calculator/_style_form.html.erb
@@ -15,6 +15,10 @@
 		</p>
 		<p>
 		<label class="radio">
+		<input type="radio" id="calculation-style-6" name="calculation-style" value="6"> Commons only sitting days</label>
+		</p>
+		<p>
+		<label class="radio">
 		<input type="radio" id="calculation-style-4" name="calculation-style" value="4"> Proposed negative statutory instruments</label>
 		</p>
 		<p>
