new comments for national policy statement calculations

--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -6,5 +6,6 @@
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/egg-timer/commons_only_si.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/egg-timer/pnsi.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/egg-timer/treaty.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for Commons only sitting days', '/egg-timer/commons_only_sitting_days.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for sitting days in an interval', '/egg-timer/interval.rb.html' ) ) %>
 </ul>
