added national policy statements

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -87,6 +87,12 @@
 	<%= content_tag( 'li', "Set the number of days to count as 120." ) %>
 </ul>
 
+<%= content_tag( 'h2', 'National Policy Statement consideration period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 21." ) %>
+</ul>
+
 <%= content_tag( 'h2', 'Treaty objection period A' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
