link to calendar sync checker

--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -14,4 +14,5 @@
 	<li><%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %></li>
 	<li><%= link_to( 'MacOS application', meta_app_url )  %></li>
 	<li><%= link_to( 'Recess date checker', meta_recess_checker_url )  %></li>
+	<li><%= link_to( 'Calendar sync checker', meta_calendar_sync_checker_url )  %></li>
 </ul>
