added enhanced affirmatives

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -87,6 +87,24 @@
 	<%= content_tag( 'li', "Set the number of days to count as 120." ) %>
 </ul>
 
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - recommendation period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 30." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - pre-approval period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 40." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - extended pre-approval period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60." ) %>
+</ul>
+
 <%= content_tag( 'h2', 'National Policy Statement consideration period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
