--- a/app/views/calendar/_parliamentary_time.html.erb
+++ b/app/views/calendar/_parliamentary_time.html.erb
@@ -1,23 +1,27 @@
 <div id="parliamentary-time">
-	
-	<%# If the date is during dissolution ... %>
-	<% if parliamentary_time.dissolution_period -%>
-	
-		<%# ... we display the dissolution message. %>
-		<%= content_tag( 'p', "#{@title} is in the #{link_to( "#{parliamentary_time.dissolution_period.number.ordinalize} dissolution period", dissolution_period_show_url( :dissolution_period => parliamentary_time.dissolution_period ) )}.".html_safe ) %>
 		
-	<%# Otherwise, if the date is during a Parliament period ... %>
-	<% elsif parliamentary_time.parliament_period -%>
+	<%# If the date is during a Parliament period ... %>
+	<% if parliamentary_time.parliament_period -%>
 	
-		<%# ... if the date is during a prorogation period ... %>
-		<% if parliamentary_time.prorogation_period -%>
+		<%# If the date is in a session ... %>
+		<% if parliamentary_time.session -%>
+			<%= content_tag( 'p', "#{@title} is in the #{link_to( "#{parliamentary_time.session.number.ordinalize} session", session_show_url( :session => parliamentary_time.session ) )} of the #{link_to( "#{parliamentary_time.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => parliamentary_time.parliament_period ) )}.".html_safe ) %>
+			
+			
+			<% # If this is the final date of the session ... %>
+			<% if @is_final_day_of_session -%>
+				<%= content_tag( 'p', "#{@title} is the final day of the session. Given this system records the end date, but not the time at which the session ends, it is not possible to determine whether papers laid on this date would be reported in this session or the next session." ) %>
+			<% end -%>
+			
+		<%# Otherwise, if the date is during a prorogation period ... %>
+		<% elsif parliamentary_time.prorogation_period -%>
 		
 			<%# ... if the preceding session and following session are not part of the same Parliament period ...%>
 			<% if @preceding_session.parliament_period_id != @following_session.parliament_period_id -%>
 			
 				<%# ... we know this is a prorogation immediately preceding dissolution. %>
 				<%= content_tag( 'p', "#{@title} forms part of the prorogation between the #{link_to( "#{@preceding_session.number.ordinalize} session", session_show_url( :session => @preceding_session.id ) )} and the dissolution of the #{link_to( "#{@preceding_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @preceding_session.parliament_period_id ) )}, being the #{link_to( "#{parliamentary_time.prorogation_period.number.ordinalize} prorogation", prorogation_period_show_url( :prorogation_period => parliamentary_time.prorogation_period ) )} of that Parliament.".html_safe ) %>
-				<%= content_tag( 'p', "Papers laid during this prorogation are recorded by both Houses in the #{link_to( "#{@following_session.number.ordinalize} session", session_show_url( :session => @following_session.id ) )} of the #{link_to( "#{@following_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @following_session.parliament_period_id ) )}.".html_safe ) %>
+				<%= content_tag( 'p', "Papers laid during this prorogation are reported by both Houses in the #{link_to( "#{@following_session.number.ordinalize} session", session_show_url( :session => @following_session.id ) )} of the #{link_to( "#{@following_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @following_session.parliament_period_id ) )}.".html_safe ) %>
 				
 			<%# Otherwise, if the preceding session and the following session are part of the same Parliament period ...%>
 			<% else -%>
@@ -25,13 +29,18 @@
 				<%# ... we know this is a prorogation immediately preceding a new session. %>
 				<%= content_tag( 'p', "#{@title} forms part of the prorogation between the #{link_to( @preceding_session.number.ordinalize, session_show_url( :session => @preceding_session.id ) )} and #{link_to( @following_session.number.ordinalize, session_show_url( :session => @following_session.id ) )} sessions of the #{link_to( "#{@following_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @following_session.parliament_period_id ) )}, being the #{link_to( "#{parliamentary_time.prorogation_period.number.ordinalize} prorogation", prorogation_period_show_url( :prorogation_period => parliamentary_time.prorogation_period ) )} of that Parliament.".html_safe ) %>
 				
-				<%= content_tag( 'p', "Papers laid during this prorogation are recorded by both Houses in the #{@following_session.number.ordinalize} session of the #{@following_session.parliament_period.number.ordinalize} Parliament.".html_safe ) %>
+				<%= content_tag( 'p', "Papers laid during this prorogation are reported by both Houses in the #{@following_session.number.ordinalize} session of the #{@following_session.parliament_period.number.ordinalize} Parliament.".html_safe ) %>
 				
 			<% end -%>
 			
-		<%# Otherwise, the date must be in a session. %>
-		<% elsif parliamentary_time.session -%>
-			<%= content_tag( 'p', "#{@title} is in the #{link_to( "#{parliamentary_time.session.number.ordinalize} session", session_show_url( :session => parliamentary_time.session ) )} of the #{link_to( "#{parliamentary_time.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => parliamentary_time.parliament_period ) )}.".html_safe ) %>
+		
 		<% end -%>
+		
+	<%# Otherwise, if the date is during dissolution ... %>
+	<% elsif parliamentary_time.dissolution_period -%>
+	
+		<%# ... we display the dissolution message. %>
+		<%= content_tag( 'p', "#{@title} is in the #{link_to( "#{parliamentary_time.dissolution_period.number.ordinalize} dissolution period", dissolution_period_show_url( :dissolution_period => parliamentary_time.dissolution_period ) )}.".html_safe ) %>
 	<% end -%>
 </div>
+
